--- a/bootcampportal212.online/README
+++ b/bootcampportal212.online/README
@@ -1,1 +1,14 @@
+# Bootcamp Portal
+
+The official repository of the platform for the first Trading212 backend bootcamp.
+
+
+## Description
+The project was created to serve as a place where the participants of the bootcamp can easily access needed information and links so they can save time in their everyday activities.
+It also includes a way for the mentors to add new content.
+
+## Features
+The platform features a main page where the users can see the modules from the training, news and additional recources. There is also an admin panel where a moderator can perform CRUD operations on the content of the website.
+The DB design also allows to easily create new similar programs and integrate them without much hassle and minimal added code.
+
 
