--- a/bootcampportal212.online/README
+++ b/bootcampportal212.online/README
@@ -11,4 +11,12 @@ It also includes a way for the mentors to add new content.
 The platform features a main page where the users can see the modules from the training, news and additional recources. There is also an admin panel where a moderator can perform CRUD operations on the content of the website.
 The DB design also allows to easily create new similar programs and integrate them without much hassle and minimal added code.
 
+## Implementation
+The frontend part of the application is built using HTML, CSS, JS and Bootstrap. All of the information is rendered using PHP and is taken from a MYSQL database.
+
+## Installation
+All of the code is included in the public_html folder and can be uploaded and hosted on any such service. The db schema is also included in the repo and can be used to create the repo and initiallize it with some data for demo purposes.
+
+
+
 
